SW-7868 - Fixed: Icon alignment and removed superfluous space

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
@@ -153,6 +153,7 @@
 		background: @primaryTextColor;
 		color: #fff;
 		font-weight: bold;
+        margin: 0 auto;
 
 		.icon--arrow-right {
 			.unitize(13, 16, font-size);
